{{$NEXT}}

0.5.0  2023-07-06T09:50:41+12:00
    - Add set-font-size() method. This is a replacement method
      that sets both character-level and font-level metrics
    - kerning default mode is now FT_KERNING_UNSCALED before
      set-font-size() has been called. Then Changes to
      FT_KERNING_UNFITTED.
    - Face bbox() method, which doesn't scaled has been deprecated
      in favour of bounding-box(), which does scale.

0.4.9  2023-07-04T07:46:39+12:00
    - Fix handling of unscaled font units in Face kerning and Glyph
      font metrics. Better detect that there are unscaled and don't
      divide return values by 64 (Dot6).

0.4.8  2023-06-23T06:59:48+12:00
    - Fix calculations in Font::FreeType::SizeMetrics class #16

0.4.7  2023-06-15T05:53:07+12:00
    - Add Font::FreeType::SizeMetrics class
    - Add scaled-font accessor to Font::FreeType::Face. This should
      be used after calling `set-font-size()` or `set-pixel-sizes()`
      on the font
    - Fix 'glyph-to-eps' example to work with the current version #12

0.4.6  2023-04-15T06:06:29+12:00
    - Add empty libfreetype.so and .dylib resources to fix installation
      on Linux and Windows.

0.4.5  2023-04-14T15:31:58+12:00
    - Add Windows support. Use pre-built DLLs courtesy of
      https://github.com/ubawurinna/freetype-windows-binaries

0.4.4  2023-04-06T06:06:08+12:00
    - Add face methods forall-glyph-images() and forall-char-images().
      These are similar to forall-glyphs() and forall-chars() except they
      return Font::FreeType::GlyphImage rather than Font::FreeType::Glyph.

0.4.3  2022-10-31T09:42:26+13:00
    - Add face is-internally-keyed-cid() method (for use by
      PDF::Font::Loader)

0.4.2  2022-06-21T09:25:39+12:00
    - The Font::FreeType::Outline bbox method now returns a
      Font::FreeType::BBox object rather than a raw FT_BBox.
    - The following Font::FreeType::Face methods now return
      Int:U rather than Mu for unscaleable fonts: units-per-em,